fixed the pie chart display

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Flask Plotlyjs Example</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <style>
+    svg {
+      height: 600px;
+    }
+  </style>
 </head>
 
 <body>
